{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 571,
  "lineage": "b7d11163-3b98-8e13-010a-dfa53e759339",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-02d3e6b7254216ca7",
            "domain": "vpc",
            "id": "eipalloc-02c4df1d9d03bb2b3",
            "network_interface": "eni-088fe825a54f08708",
            "private_dns": "ip-172-16-50-197.eu-west-1.compute.internal",
            "private_ip": "172.16.50.197",
            "public_dns": "ec2-52-214-30-151.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.214.30.151",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07042e91d04b1c30d",
            "arn": "arn:aws:ec2:eu-west-1:885483167133:instance/i-0731d9e748cba59b4",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "testPracticalTask-jenkins",
            "id": "i-0731d9e748cba59b4",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0b2231395053f1dd2",
            "private_dns": "ip-172-16-63-177.eu-west-1.compute.internal",
            "private_ip": "172.16.63.177",
            "public_ip": "54.246.197.232",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0effd440b4ccb8edf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e26779e11cebf6d5",
            "tags": {
              "Name": "Jenkins"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03e2bb92a28f38e5d"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.testPracticalTask_jenkins",
            "aws_internet_gateway.public",
            "aws_key_pair.jenkins_key",
            "aws_route_table_association.public",
            "aws_security_group.testPracticalTask_jenkins_sg",
            "aws_subnet.az_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-06fc7f76491694295",
            "owner_id": "885483167133",
            "tags": {
              "Name": "public"
            },
            "vpc_id": "vpc-0ca2a82e9ab2e3d1b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "testPracticalTask",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:885483167133:loadbalancer/app/testPracticalTask/4802eb0d0042f639",
            "arn_suffix": "app/testPracticalTask/4802eb0d0042f639",
            "dns_name": "testPracticalTask-1106408566.eu-west-1.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:885483167133:loadbalancer/app/testPracticalTask/4802eb0d0042f639",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "testPracticalTask",
            "security_groups": [
              "sg-024bf4469ae222250"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0acd5f8b9ed72722d"
              },
              {
                "subnet_id": "subnet-0e26779e11cebf6d5"
              }
            ],
            "subnets": [
              "subnet-0acd5f8b9ed72722d",
              "subnet-0e26779e11cebf6d5"
            ],
            "tags": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0ca2a82e9ab2e3d1b",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.allow_http",
            "aws_subnet.az_public",
            "aws_subnet.az_public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:885483167133:listener/app/testPracticalTask/4802eb0d0042f639/2b740c1ac2ad9137",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:885483167133:targetgroup/testPracticalTask-tg/627f95a8bef258a0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:885483167133:listener/app/testPracticalTask/4802eb0d0042f639/2b740c1ac2ad9137",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:885483167133:loadbalancer/app/testPracticalTask/4802eb0d0042f639",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.testPracticalTask",
            "aws_lb_target_group.testPracticalTask",
            "aws_subnet.az_public",
            "aws_subnet.az_public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "testPracticalTask",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:885483167133:targetgroup/testPracticalTask-tg/627f95a8bef258a0",
            "arn_suffix": "targetgroup/testPracticalTask-tg/627f95a8bef258a0",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:885483167133:targetgroup/testPracticalTask-tg/627f95a8bef258a0",
            "lambda_multi_value_headers_enabled": false,
            "name": "testPracticalTask-tg",
            "port": 8080,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ca2a82e9ab2e3d1b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02c4df1d9d03bb2b3",
            "id": "nat-08c2a98ff0c64e7f9",
            "network_interface_id": "eni-088fe825a54f08708",
            "private_ip": "172.16.50.197",
            "public_ip": "52.214.30.151",
            "subnet_id": "subnet-0e26779e11cebf6d5",
            "tags": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.az_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0bac7565ab673ea81",
            "owner_id": "885483167133",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-08c2a98ff0c64e7f9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_1"
            },
            "vpc_id": "vpc-0ca2a82e9ab2e3d1b"
          },
          "dependencies": [
            "aws_nat_gateway.nat",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-038a0d87477ea68e6",
            "owner_id": "885483167133",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06fc7f76491694295",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_1"
            },
            "vpc_id": "vpc-0ca2a82e9ab2e3d1b"
          },
          "dependencies": [
            "aws_internet_gateway.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05e47e1360c670246",
            "owner_id": "885483167133",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06fc7f76491694295",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_2"
            },
            "vpc_id": "vpc-0ca2a82e9ab2e3d1b"
          },
          "dependencies": [
            "aws_internet_gateway.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b693b91f6ca201b0",
            "route_table_id": "rtb-0bac7565ab673ea81",
            "subnet_id": "subnet-042f6899d6d5a3e3e"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.az_private",
            "aws_subnet.az_public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab30e34b7f920175",
            "route_table_id": "rtb-0bac7565ab673ea81",
            "subnet_id": "subnet-00ce1f8b83278adfc"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.az_private_2",
            "aws_subnet.az_public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa2e5458d7621bb1",
            "route_table_id": "rtb-038a0d87477ea68e6",
            "subnet_id": "subnet-0e26779e11cebf6d5"
          },
          "dependencies": [
            "aws_internet_gateway.public",
            "aws_route_table.public",
            "aws_subnet.az_public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018d2dcc1aada4e09",
            "route_table_id": "rtb-038a0d87477ea68e6",
            "subnet_id": "subnet-0acd5f8b9ed72722d"
          },
          "dependencies": [
            "aws_internet_gateway.public",
            "aws_route_table.public",
            "aws_subnet.az_public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:885483167133:security-group/sg-024bf4469ae222250",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-024bf4469ae222250",
            "ingress": [
              {
                "cidr_blocks": [
                  "95.106.214.219/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_access to http",
            "name_prefix": null,
            "owner_id": "885483167133",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0ca2a82e9ab2e3d1b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "testPracticalTask_jenkins_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:885483167133:security-group/sg-03e2bb92a28f38e5d",
            "description": "Allow Http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03e2bb92a28f38e5d",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.48.0/20"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "95.106.214.219/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "95.106.214.219/32"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "testPracticalTask-jenkins-sg",
            "name_prefix": null,
            "owner_id": "885483167133",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0ca2a82e9ab2e3d1b"
          },
          "dependencies": [
            "aws_subnet.az_public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "az_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:885483167133:subnet/subnet-042f6899d6d5a3e3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "172.16.16.0/20",
            "id": "subnet-042f6899d6d5a3e3e",
            "map_public_ip_on_launch": false,
            "owner_id": "885483167133",
            "tags": {
              "Name": "private_1"
            },
            "vpc_id": "vpc-0ca2a82e9ab2e3d1b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "az_private_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:885483167133:subnet/subnet-00ce1f8b83278adfc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "172.16.32.0/20",
            "id": "subnet-00ce1f8b83278adfc",
            "map_public_ip_on_launch": false,
            "owner_id": "885483167133",
            "tags": {
              "Name": "private_2"
            },
            "vpc_id": "vpc-0ca2a82e9ab2e3d1b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "az_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:885483167133:subnet/subnet-0e26779e11cebf6d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "172.16.48.0/20",
            "id": "subnet-0e26779e11cebf6d5",
            "map_public_ip_on_launch": false,
            "owner_id": "885483167133",
            "tags": {
              "Name": "public_1"
            },
            "vpc_id": "vpc-0ca2a82e9ab2e3d1b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "az_public_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:885483167133:subnet/subnet-0acd5f8b9ed72722d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "172.16.64.0/20",
            "id": "subnet-0acd5f8b9ed72722d",
            "map_public_ip_on_launch": false,
            "owner_id": "885483167133",
            "tags": {
              "Name": "public_2"
            },
            "vpc_id": "vpc-0ca2a82e9ab2e3d1b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:885483167133:vpc/vpc-0ca2a82e9ab2e3d1b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0ae769bae1d45776d",
            "default_route_table_id": "rtb-0d274443316552b64",
            "default_security_group_id": "sg-0e3337c7844dbdbab",
            "dhcp_options_id": "dopt-0f62a569",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ca2a82e9ab2e3d1b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d274443316552b64",
            "owner_id": "885483167133"
          }
        }
      ]
    }
  ]
}